@@ -1,3 +1,8 @@
+2002-08-02  Mikhael Goikhman  <migo@homemail.com>
+
+	* Makefile.am:
+	DESTDIR fix
+
 2002-06-09  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm-menu-headlines.1:
