@@ -1,3 +1,9 @@
+2002-08-02  Mikhael Goikhman  <migo@homemail.com>
+
+	* NEWS:
+	* fvwm/Makefile.am:
+	DESTDIR fix
+
 2002-07-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/focus.c (CMD_WarpToWindow):
